Add WebSiteURL to Config file

--- a/EventMob/www/view/setting.html
+++ b/EventMob/www/view/setting.html
@@ -13,6 +13,10 @@
 				<span class="input-label">Web Service Name</span>
 				<input type="text" placeholder="TmsWS" ng-model="Setting.BaseUrl">
 			</label>
+            <label class="item item-input item-stacked-label">
+                <span class="input-label">Web Site URL</span>
+                <input type="text" placeholder="www.sysfreight.net:8081/tmsapp" ng-model="Setting.WebSiteUrl">
+			</label>
 			<button class="button button-block button-positive" ng-click="saveSetting()">
 				Update
 			</button>
