--- a/EventMob/www/view/login.html
+++ b/EventMob/www/view/login.html
@@ -2,7 +2,7 @@
 	<ion-side-menus enable-menu-with-back-views="true">
 		<ion-side-menu-content>
 			<div style="text-align:center; margin-left:auto; margin-right:auto;">
-				<img src="./img/login.png" width="60%" height="60%">
+				<img src="./img/login.png" width="220px;" height="220px;">
 			</div>
 			<div class="list list-inset">
                 <div class="item item-divider">
