Add Transporter login logic

--- a/EventMob/www/view/login.html
+++ b/EventMob/www/view/login.html
@@ -14,11 +14,11 @@
 				</label>
                 <label class="item item-input" ng-show="funcRoleJuage(2)">
                     <i class="icon ion-android-person placeholder-icon"></i>&nbsp;&nbsp;
-                    <input type="tel" id="iUserID" placeholder="User ID" required ng-model="logininfo.strUserID">
+                    <input type="tel" id="iCustomerCode" placeholder="User ID" required ng-model="logininfo.strCustomerCode">
                 </label>
                 <label class="item item-input" ng-show="funcRoleJuage(2)">
                     <i class="icon ion-android-folder-open placeholder-icon"></i>&nbsp;&nbsp;
-                    <input type="tel" id="iEventJobNo" placeholder="Event Job No" required ng-model="logininfo.strEventJobNo">
+                    <input type="tel" id="iJobNo" placeholder="Event Job No" required ng-model="logininfo.strJobNo">
                 </label>
 				<button class="button button-block button-positive" ng-click="funcLogin()">SIGN IN</button>
 			</div>
