--- a/EventMob/www/view/main.html
+++ b/EventMob/www/view/main.html
@@ -1,6 +1,6 @@
 ﻿<ion-view title="Main">
 	<ion-header-bar class="bar-positive">
-	  <div class="h1 title" >Hi {{ strDriverName }}</div>
+	  <div class="h1 title" >Hi <span ng-bind="strName"></span></div>
 	</ion-header-bar>
 	<ion-content>			
 		<div class="mainList">
