--- a/EventMob/www/view/list.html
+++ b/EventMob/www/view/list.html
@@ -7,9 +7,12 @@
 		<ion-refresher pulling-text="Pull to refresh" on-refresh="doRefresh()">
 		</ion-refresher>
 		<ion-list show-delete="shouldShowDelete" can-swipe="listCanSwipe">
-			<ion-item ng-repeat="task in tasks" id="Task{{ task.Index }}" class="item-remove-animate item-icon-right" >
-			    <p style="font-size:0.8em;">Event Name&nbsp;&nbsp;&nbsp;&nbsp;:&nbsp;&nbsp;<span ng-bind="task.ItemName" style="font-size:1.3em;"></span></p>
+			<ion-item ng-repeat="task in tasks" class="item-remove-animate item-icon-right" >
+			    <p style="font-size:0.8em;" ng-show="funcShowRole(1)">Event Name&nbsp;&nbsp;&nbsp;&nbsp;:&nbsp;&nbsp;<span ng-bind="task.ItemName" style="font-size:1.3em;"></span></p>
 			    <p style="font-size:0.8em;" ng-show="showContainerNo(task)">Container No&nbsp;&nbsp;:&nbsp;&nbsp;<span ng-bind="task.ContainerNo" style="font-size:1.3em;"></span></p>
+                <p style="font-size:0.8em;" ng-show="funcShowRole(3)">Vehicle No&nbsp;&nbsp;:&nbsp;&nbsp;<span ng-bind="task.VehicleNo" style="font-size:1.3em;"></span></p>
+                <p style="font-size:0.8em;" ng-show="funcShowRole(3)">Driver Name&nbsp;&nbsp;:&nbsp;&nbsp;<span ng-bind="task.DriverName" style="font-size:1.3em;"></span></p>
+                <p style="font-size:0.8em;" ng-show="funcShowRole(3)">Truck <span ng-bind="funcShowTruckType(task)"></span> Date&nbsp;&nbsp;:&nbsp;&nbsp;<span ng-bind="task.TruckDateTime" style="font-size:1.3em;"></span></p>
 			    <i class="icon ion-android-arrow-dropleft"></i>
                 <ion-option-button class="button-assertive" ng-click="slideDone(task,'N')">
                     Remark
