--- a/EventMob/www/view/main.html
+++ b/EventMob/www/view/main.html
@@ -1,6 +1,7 @@
 ﻿<ion-view title="Main">
 	<ion-header-bar class="bar-positive">
-	  <div class="h1 title" >Hi <span ng-bind="strName"></span></div>
+        <button class="button button-icon icon ion-navicon" ng-click="returnLogin()"></button>
+        <div class="h1 title" >Hi <span ng-bind="strName"></span></div>
 	</ion-header-bar>
 	<ion-content>			
 		<div class="mainList">
