--- a/EventMob/www/view/list.html
+++ b/EventMob/www/view/list.html
@@ -40,7 +40,7 @@
                     <div class="col col-50">Vehicle No</div>
                     <div class="col col-50"><span ng-bind="task.VehicleNo" style="font-size:1.3em;"></span></div>
                 </div>
-                <div class="row" style="padding: 0px;font-size:0.8em;" ng-show="funcShowRole(3)">
+                <div class="row" style="padding: 0px;font-size:0.8em;" ng-if="funcShowRole(3)">
                     <div class="col col-50">Driver Name</div>
                     <div class="col col-50"><span ng-bind="task.DriverName" style="font-size:1.3em;"></span></div>
                 </div>
@@ -48,11 +48,15 @@
                     <div class="col col-50">Truck <span ng-bind="funcShowTruckType(task)"></span> Date</div>
                     <div class="col col-50"><span ng-bind="funcShowDatetime(task.TruckDateTime)" style="font-size:1.3em;"></span></div>
                 </div>
-			    <i class="icon ion-android-arrow-dropleft"></i>
-                <ion-option-button class="button-assertive" ng-click="slideDone(task,'N')">
+			    <i class="icon ion-android-arrow-dropleft" ng-if="task.DoneFlag!='Y'"></i>
+			    <i class="icon ion-android-done" ng-if="task.DoneFlag=='Y'"></i>
+                <ion-option-button class="button-calm" ng-click="slideDone(task,'OPEN')" ng-if="funcShowRole(1) && task.DoneFlag=='Y'">
+                    Open
+                </ion-option-button>
+                <ion-option-button class="button-assertive" ng-click="slideDone(task,'UPDATE')" ng-if="funcShowRole(1) && task.DoneFlag!='Y'">
                     Remark
                 </ion-option-button>
-			    <ion-option-button class="button-calm" ng-click="slideDone(task, 'Y')">
+			    <ion-option-button class="button-calm" ng-click="slideDone(task, 'DONE')" ng-if="funcShowRole(1) && task.DoneFlag!='Y'">
 				    Done
 			    </ion-option-button>
 			</ion-item>
