--- a/EventMob/www/view/main.html
+++ b/EventMob/www/view/main.html
@@ -3,14 +3,17 @@
         <button class="button button-icon icon ion-navicon" ng-click="returnLogin()"></button>
         <div class="h1 title" >Hi <span ng-bind="strName"></span></div>
 	</ion-header-bar>
-	<ion-content>			
+	<ion-content>
 		<div class="mainList">
 			<div class="list card" ng-repeat="Job in Jobs" ng-click="showList(Job.JobNo)">
 				<div class="item item-body">
-					<p>Job No&nbsp;&nbsp;/&nbsp;&nbsp;<span class="tc-light-blue-A700" style="font-size:1.2em;">{{ Job.JobNo }}</span></p>
-					<p>{{ Job.ContainerCounts }} Tasks</p>
+					<p>Job No&nbsp;&nbsp;/&nbsp;&nbsp;<span class="tc-light-blue-A700" style="font-size:1.2em;" ng-bind="Job.JobNo"></span></p>
+					<p>
+                        <span ng-bind="Job.ContainerCounts"></span> Tasks &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        <span ng-if="Job.TaskDoneCounts>0"><i class="icon ion-android-done"></i>&nbsp;<span ng-bind="Job.TaskDoneCounts"></span>&nbsp;Done</span>
+                    </p>
 				</div>
 			</div>
-		</div>		
+		</div>
 	</ion-content>
 </ion-view>
