--- a/TMS/www/view/main.html
+++ b/TMS/www/view/main.html
@@ -1,7 +1,8 @@
-﻿<ion-view title="Main">
+
+<ion-view title="Main">
 	<ion-header-bar class="bar-positive">
-        <button class="button button-icon icon ion-navicon" ng-click="returnLogin()"></button>
-        <div class="h1 title" >Hi <span ng-bind="strName"></span></div>
+		<button class="button button-icon icon ion-navicon" ng-click="returnLogin()"></button>
+		<div class="h1 title">Hi <span ng-bind="strName"></span></div>
 	</ion-header-bar>
 	<ion-content>
 		<div class="mainList">
@@ -9,9 +10,9 @@
 				<div class="item item-body">
 					<p>Job No&nbsp;&nbsp;/&nbsp;&nbsp;<span class="tc-light-blue-A700" style="font-size:1.2em;" ng-bind="Job.JobNo"></span></p>
 					<p>
-                        <span ng-bind="Job.ContainerCounts"></span> Tasks &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                        <span ng-if="Job.TaskDoneCounts>0"><i class="icon ion-android-done"></i>&nbsp;<span ng-bind="Job.TaskDoneCounts"></span>&nbsp;Done</span>
-                    </p>
+						<span ng-bind="Job.ContainerCounts"></span> Tasks &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+						<span ng-if="Job.TaskDoneCounts>0"><i class="icon ion-android-done"></i>&nbsp;<span ng-bind="Job.TaskDoneCounts"></span>&nbsp;Done</span>
+					</p>
 				</div>
 			</div>
 		</div>
